# RetroNest-Project

./: .gitignore  CLAUDE.md
cpp/: CMakeLists.txt
cpp/qml/AppUI/: AchievementToast.qml  AchievementsPage.qml  ActionToast.qml  AllGamesPage.qml  AppWindow.qml  AspectRatioSettings.qml  BaseModalCard.qml  BaseToast.qml  BiosSection.qml  ButtonHints.qml  ConfirmDialog.qml  EmptyStatePage.qml  EmulationView.qml  EmulatorDetailPage.qml  EmulatorLogos.js  EmulatorManageGrid.qml  EmulatorManagePage.qml  FocusRing.qml  FocusableItem.qml  GameActionPopup.qml  GameCard.qml  GameGridView.qml  GamesPage.qml  GenericListPage.qml  GenericMultiCardPicker.qml  GenericRowPicker.qml  InGameAchievementsPopup.qml  InGameMenu.qml  InGameMenuPanel.qml  LibretroOverlayPanel.qml  PathsSettings.qml  PillRow.qml  ProgressPopup.qml  RAIndicatorBar.qml  RecentlyPlayedPage.qml  ResolutionSettings.qml  ResumeStateDialog.qml  RetroAchievementsSettings.qml  ScraperSettings.qml  SettingsOverlay.qml  (+8 more)
cpp/qml/SetupWizard/: AspectRatioPage.qml  EmulatorCard.qml  EmulatorsPage.qml  FilesPage.qml  FolderPage.qml  InstallPage.qml  Main.qml  NavBar.qml  PillButton.qml  ResolutionPage.qml  RetroAchievementsPage.qml  ScreenScraperPage.qml  StepIndicator.qml  StorageLocationsPage.qml  WelcomePage.qml  WizardTheme.qml
cpp/resources/: AppIcon.icns  RetroNest.entitlements
cpp/spike/moltenvk_metal_interop/: CMakeLists.txt  README.md  main.mm
cpp/src/: main.cpp
cpp/src/adapters/: adapter_registry.cpp  adapter_registry.h  dolphin_adapter.cpp  dolphin_adapter.h  duckstation_adapter.cpp  duckstation_adapter.h  emulator_adapter.cpp  emulator_adapter.h  pcsx2_adapter.cpp  pcsx2_adapter.h  ppsspp_adapter.cpp  ppsspp_adapter.h
cpp/src/adapters/libretro/: dolphin_libretro_adapter.cpp  dolphin_libretro_adapter.h  duckstation_libretro_adapter.cpp  duckstation_libretro_adapter.h  libretro_adapter.cpp  libretro_adapter.h  mgba_libretro_adapter.cpp  mgba_libretro_adapter.h  mupen64plus_libretro_adapter.cpp  mupen64plus_libretro_adapter.h  pcsx2_libretro_adapter.cpp  pcsx2_libretro_adapter.h  ppsspp_libretro_adapter.cpp  ppsspp_libretro_adapter.h  snes9x_libretro_adapter.cpp  snes9x_libretro_adapter.h
cpp/src/core/: binding_def.h  bitmask_helpers.h  controller_type_def.h  cover_resolver.h  database.cpp  database.h  detail_actions.cpp  detail_actions.h  emulator_installer.cpp  emulator_installer.h  game_session.cpp  game_session.h  github_client.h  ini_file.cpp  ini_file.h  iso9660_reader.cpp  iso9660_reader.h  macos_fullscreen.h  macos_fullscreen.mm  manifest.h  manifest_loader.cpp  manifest_loader.h  migration_pcsx2.cpp  migration_pcsx2.h  migration_ppsspp.cpp  migration_ppsspp.h  option_overlay.h  path_overrides_store.cpp  path_overrides_store.h  paths.cpp  paths.h  preview_spec.h  ra_client.cpp  ra_client.h  rom_scanner.cpp  rom_scanner.h  scraper.cpp  scraper.h  sdl_input_manager.cpp  sdl_input_manager.h  (+6 more)
cpp/src/core/libretro/: audio_sink.cpp  audio_sink.h  autorelease_scope.h  core_loader.cpp  core_loader.h  core_prober.cpp  core_prober.h  core_runtime.cpp  core_runtime.h  declared_options.cpp  declared_options.h  environment_callbacks.cpp  environment_callbacks.h  frontend_settings_store.cpp  frontend_settings_store.h  hotkey_dispatcher.cpp  hotkey_dispatcher.h  hotkey_matcher.cpp  hotkey_matcher.h  input_router.cpp  input_router.h  libretro_hotkey_controller.cpp  libretro_hotkey_controller.h  libretro_hotkey_defs.cpp  libretro_hotkey_defs.h  libretro_render_surface.h  options_store.cpp  options_store.h  rcheevos_runtime.cpp  rcheevos_runtime.h  retro_log.cpp  retro_log.h  video_hardware_gl.h  video_hardware_gl.mm  video_software.cpp  video_software.h
cpp/src/services/: config_service.cpp  config_service.h  emulator_installer.cpp  emulator_installer.h  emulator_service.cpp  emulator_service.h  game_service.cpp  game_service.h  github_credentials.cpp  github_credentials.h  hotkey_service.cpp  hotkey_service.h  installer_utils.cpp  installer_utils.h  patches_installer.cpp  patches_installer.h  patches_sidecar.cpp  patches_sidecar.h  ra_credentials.cpp  ra_credentials.h  ra_service.cpp  ra_service.h  rom_scanner.cpp  rom_scanner.h  scraper_credentials.cpp  scraper_credentials.h  scraper_service.cpp  scraper_service.h
cpp/src/ui/: app_controller.cpp  app_controller.h  emulator_list_model.cpp  emulator_list_model.h  game_list_model.cpp  game_list_model.h  in_game_menu_controller.cpp  in_game_menu_controller.h  in_game_menu_panel.cpp  in_game_menu_panel.h  install_controller.cpp  install_controller.h  libretro_overlay_panel.cpp  libretro_overlay_panel.h  settings_theme.h  style.h  theme_context.cpp  theme_context.h  theme_manager.cpp  theme_manager.h  wizard_state.cpp  wizard_state.h  wizard_theme.h
cpp/tests/: test_aspect_ratio_preview.cpp  test_asset_match.cpp  test_audio_sink.cpp  test_audio_sink_mute_volume.cpp  test_bitmask_helpers.cpp  test_config_service_libretro_hotkeys.cpp  test_controller_bindings_view.cpp  test_core_loader.cpp  test_core_prober.cpp  test_core_runtime.cpp  test_database_migrations.cpp  test_declared_options.cpp  test_dependency_master_roots.cpp  test_detail_actions.cpp  test_dolphin_controller_schema.cpp  test_dolphin_libretro_controller_schema.cpp  test_dolphin_libretro_schema.cpp  test_dolphin_schema.cpp  test_duckstation_aspect_ratio_preview.cpp  test_duckstation_controller_schema.cpp  test_duckstation_libretro_schema.cpp  test_duckstation_schema.cpp  test_emulator_version_records.cpp  test_environment_callbacks.cpp  test_format_binding.cpp  test_game_session_save_slot.cpp  test_generic_hotkey_page.cpp  test_github_download_auth.cpp  test_hotkey_binding_row.cpp  test_hotkey_defs.cpp  test_hotkey_dispatcher.cpp  test_hotkey_matcher.cpp  test_hotkey_service_libretro.cpp  test_ini_file.cpp  test_input_router.cpp  test_iso9660_reader.cpp  test_libretro_hotkey_controller.cpp  test_libretro_hotkey_defs.cpp  test_libretro_schema_merge.cpp  test_manifest_libretro_fields.cpp  (+43 more)
cpp/tests/fixtures/: fake_libretro_core.c
cpp/tests/stubs/: app_controller_stub.cpp  generic_hotkey_page_stubs.cpp
(+457 files in other folders)
